# LLM-Query-Consulting

./: README.md  arquitectura.md  pyproject.toml
notebooks/: demo.ipynb
src/: app.py  main.py
src/features/: database.py  query_processor.py
src/model/: nl_to_sql.py
src/models/: natural_language_to_sql.py
src/utils/: db_connection.py  decorators.py  env_setup.py
