[tool.poetry]
name = "databasesllms"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.0.0"
openai = "^1.44.1"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
